--- a/src/solution.ipynb
+++ b/src/solution.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,6 +30,7 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.linear_model import LinearRegression, Lasso, Ridge\n",
     "\n",
+    "pd.set_option('display.max_rows', 500)\n",
     "pd.set_option('display.max_rows', 500)\n"
    ]
   },
@@ -1499,7 +1500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
