--- a/src/Madesh_solution.ipynb
+++ b/src/Madesh_solution.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,11 +57,453 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "0",
+         "rawType": "object",
+         "type": "unknown"
+        },
+        {
+         "name": "1",
+         "rawType": "object",
+         "type": "unknown"
+        },
+        {
+         "name": "2",
+         "rawType": "object",
+         "type": "unknown"
+        },
+        {
+         "name": "3",
+         "rawType": "object",
+         "type": "unknown"
+        },
+        {
+         "name": "4",
+         "rawType": "object",
+         "type": "unknown"
+        }
+       ],
+       "conversionMethod": "pd.DataFrame",
+       "ref": "cb6308c3-bb99-4001-baa5-e1bf2197be58",
+       "rows": [
+        [
+         "fips",
+         "1001",
+         "1003",
+         "1005",
+         "1007",
+         "1009"
+        ],
+        [
+         "TOT_POP",
+         "55601",
+         "218022",
+         "24881",
+         "22400",
+         "57840"
+        ],
+        [
+         "0-9",
+         "6787",
+         "24757",
+         "2732",
+         "2456",
+         "7095"
+        ],
+        [
+         "0-9 y/o % of total pop",
+         "12.20661499",
+         "11.35527607",
+         "10.98026607",
+         "10.96428571",
+         "12.26659751"
+        ],
+        [
+         "19-Oct",
+         "7637",
+         "26913",
+         "2960",
+         "2596",
+         "7570"
+        ],
+        [
+         "10-19 y/o % of total pop",
+         "13.73536447",
+         "12.3441671",
+         "11.89662795",
+         "11.58928571",
+         "13.08782849"
+        ],
+        [
+         "20-29",
+         "6878",
+         "23579",
+         "3268",
+         "3029",
+         "6742"
+        ],
+        [
+         "20-29 y/o % of total pop",
+         "12.37028111",
+         "10.81496363",
+         "13.13452032",
+         "13.52232143",
+         "11.65629322"
+        ],
+        [
+         "30-39",
+         "7089",
+         "25213",
+         "3201",
+         "3113",
+         "6884"
+        ],
+        [
+         "30-39 y/o % of total pop",
+         "12.74977069",
+         "11.56442928",
+         "12.86523854",
+         "13.89732143",
+         "11.90179806"
+        ],
+        [
+         "40-49",
+         "7582",
+         "27338",
+         "3074",
+         "3038",
+         "7474"
+        ],
+        [
+         "40-49 y/o % of total pop",
+         "13.63644539",
+         "12.53910156",
+         "12.35480889",
+         "13.5625",
+         "12.92185339"
+        ],
+        [
+         "50-59",
+         "7738",
+         "29986",
+         "3278",
+         "3115",
+         "7844"
+        ],
+        [
+         "50-59 y/o % of total pop",
+         "13.91701588",
+         "13.75365789",
+         "13.17471163",
+         "13.90625",
+         "13.5615491"
+        ],
+        [
+         "60-69",
+         "5826",
+         "29932",
+         "3076",
+         "2545",
+         "6965"
+        ],
+        [
+         "60-69 y/o % of total pop",
+         "10.47822881",
+         "13.72888975",
+         "12.36284715",
+         "11.36160714",
+         "12.04183956"
+        ],
+        [
+         "70-79",
+         "4050",
+         "20936",
+         "2244",
+         "1723",
+         "4931"
+        ],
+        [
+         "70-79 y/o % of total pop",
+         "7.284041654",
+         "9.602700645",
+         "9.018930107",
+         "7.691964286",
+         "8.525242047"
+        ],
+        [
+         "80+",
+         "2014",
+         "9368",
+         "1048",
+         "785",
+         "2335"
+        ],
+        [
+         "80+ y/o % of total pop",
+         "3.62223701",
+         "4.296814083",
+         "4.212049355",
+         "3.504464286",
+         "4.036998617"
+        ],
+        [
+         "White-alone pop",
+         "42660",
+         "190301",
+         "12209",
+         "17211",
+         "55456"
+        ],
+        [
+         "% White-alone",
+         "76.72523875",
+         "87.2852281",
+         "49.06957116",
+         "76.83482143",
+         "95.87828492"
+        ],
+        [
+         "Black-alone pop",
+         "10915",
+         "19492",
+         "12042",
+         "4770",
+         "950"
+        ],
+        [
+         "% Black-alone",
+         "19.63094189",
+         "8.940382163",
+         "48.39837627",
+         "21.29464286",
+         "1.642461964"
+        ],
+        [
+         "Native American/American Indian-alone pop",
+         "267",
+         "1684",
+         "164",
+         "98",
+         "378"
+        ],
+        [
+         "% NA/AI-alone",
+         "0.480207191",
+         "0.772399116",
+         "0.659137495",
+         "0.4375",
+         "0.653526971"
+        ],
+        [
+         "Asian-alone pop",
+         "681",
+         "2508",
+         "113",
+         "53",
+         "185"
+        ],
+        [
+         "% Asian-alone",
+         "1.224798115",
+         "1.150342626",
+         "0.45416181",
+         "0.236607143",
+         "0.319847856"
+        ],
+        [
+         "Hawaiian/Pacific Islander-alone pop",
+         "62",
+         "146",
+         "46",
+         "26",
+         "70"
+        ],
+        [
+         "% Hawaiian/PI-alone",
+         "0.111508786",
+         "0.066965719",
+         "0.184880029",
+         "0.116071429",
+         "0.121023513"
+        ],
+        [
+         "Two or more races pop",
+         "1016",
+         "3891",
+         "307",
+         "242",
+         "801"
+        ],
+        [
+         "% Two or more races",
+         "1.827305264",
+         "1.78468228",
+         "1.233873237",
+         "1.080357143",
+         "1.384854772"
+        ],
+        [
+         "POP_ESTIMATE_2018",
+         "55601",
+         "218022",
+         "24881",
+         "22400",
+         "57840"
+        ],
+        [
+         "N_POP_CHG_2018",
+         "158",
+         "5403",
+         "-277",
+         "-155",
+         "13"
+        ],
+        [
+         "GQ_ESTIMATES_2018",
+         "455",
+         "2190",
+         "2820",
+         "2151",
+         "489"
+        ],
+        [
+         "R_birth_2018",
+         "11.8",
+         "10.5",
+         "10.4",
+         "11.1",
+         "11.8"
+        ],
+        [
+         "R_death_2018",
+         "9.6",
+         "10.3",
+         "12.9",
+         "11.4",
+         "11.4"
+        ],
+        [
+         "R_NATURAL_INC_2018",
+         "2.2",
+         "0.1",
+         "-2.5",
+         "-0.3",
+         "0.3"
+        ],
+        [
+         "R_INTERNATIONAL_MIG_2018",
+         "0.0",
+         "0.5",
+         "0.5",
+         "0.4",
+         "0.1"
+        ],
+        [
+         "R_DOMESTIC_MIG_2018",
+         "0.7",
+         "24.3",
+         "-9.1",
+         "-7.0",
+         "-0.2"
+        ],
+        [
+         "R_NET_MIG_2018",
+         "0.6",
+         "24.8",
+         "-8.6",
+         "-6.6",
+         "0.0"
+        ],
+        [
+         "Less than a high school diploma 2014-18",
+         "4204",
+         "14310",
+         "4901",
+         "2650",
+         "7861"
+        ],
+        [
+         "High school diploma only 2014-18",
+         "12119",
+         "40579",
+         "6486",
+         "7471",
+         "13489"
+        ],
+        [
+         "Some college or associate's degree 2014-18",
+         "10552",
+         "46025",
+         "4566",
+         "3846",
+         "13267"
+        ],
+        [
+         "Bachelor's degree or higher 2014-18",
+         "10291",
+         "46075",
+         "2220",
+         "1813",
+         "5010"
+        ],
+        [
+         "Percent of adults with less than a high school diploma 2014-18",
+         "11.3",
+         "9.7",
+         "27.0",
+         "16.8",
+         "19.8"
+        ],
+        [
+         "Percent of adults with a high school diploma only 2014-18",
+         "32.6",
+         "27.6",
+         "35.7",
+         "47.3",
+         "34.0"
+        ],
+        [
+         "Percent of adults completing some college or associate's degree 2014-18",
+         "28.4",
+         "31.3",
+         "25.1",
+         "24.4",
+         "33.5"
+        ],
+        [
+         "Percent of adults with a bachelor's degree or higher 2014-18",
+         "27.7",
+         "31.3",
+         "12.2",
+         "11.5",
+         "12.6"
+        ],
+        [
+         "POVALL_2018",
+         "7587",
+         "21069",
+         "6788",
+         "4400",
+         "7527"
+        ]
+       ],
+       "shape": {
+        "columns": 5,
+        "rows": 108
+       }
+      },
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -1289,7 +1731,7 @@
        "Urban_rural_code                                            2  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1300,7 +1742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1438,7 +1880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1455,7 +1897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1478,54 +1920,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 20,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(2355, 108)"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "training_df.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "340      14310\n",
-       "1171     26427\n",
-       "2303     39498\n",
-       "967       5013\n",
-       "872      16904\n",
-       "         ...  \n",
-       "1770    130090\n",
-       "2242    102811\n",
-       "1591     13122\n",
-       "777      15479\n",
-       "611     104143\n",
-       "Name: TOT_POP, Length: 2355, dtype: int64"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "training_df['TOT_POP']"
+    "### 2.2 Feature selection "
    ]
   }
  ],
