--- a/src/solution.ipynb
+++ b/src/solution.ipynb
@@ -69,6 +69,448 @@
    "outputs": [
     {
      "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "0",
+         "rawType": "object",
+         "type": "unknown"
+        },
+        {
+         "name": "1",
+         "rawType": "object",
+         "type": "unknown"
+        },
+        {
+         "name": "2",
+         "rawType": "object",
+         "type": "unknown"
+        },
+        {
+         "name": "3",
+         "rawType": "object",
+         "type": "unknown"
+        },
+        {
+         "name": "4",
+         "rawType": "object",
+         "type": "unknown"
+        }
+       ],
+       "conversionMethod": "pd.DataFrame",
+       "ref": "cd8ad380-0067-444d-b9fe-ffa97aef63b3",
+       "rows": [
+        [
+         "fips",
+         "1001",
+         "1003",
+         "1005",
+         "1007",
+         "1009"
+        ],
+        [
+         "TOT_POP",
+         "55601",
+         "218022",
+         "24881",
+         "22400",
+         "57840"
+        ],
+        [
+         "0-9",
+         "6787",
+         "24757",
+         "2732",
+         "2456",
+         "7095"
+        ],
+        [
+         "0-9 y/o % of total pop",
+         "12.20661499",
+         "11.35527607",
+         "10.98026607",
+         "10.96428571",
+         "12.26659751"
+        ],
+        [
+         "19-Oct",
+         "7637",
+         "26913",
+         "2960",
+         "2596",
+         "7570"
+        ],
+        [
+         "10-19 y/o % of total pop",
+         "13.73536447",
+         "12.3441671",
+         "11.89662795",
+         "11.58928571",
+         "13.08782849"
+        ],
+        [
+         "20-29",
+         "6878",
+         "23579",
+         "3268",
+         "3029",
+         "6742"
+        ],
+        [
+         "20-29 y/o % of total pop",
+         "12.37028111",
+         "10.81496363",
+         "13.13452032",
+         "13.52232143",
+         "11.65629322"
+        ],
+        [
+         "30-39",
+         "7089",
+         "25213",
+         "3201",
+         "3113",
+         "6884"
+        ],
+        [
+         "30-39 y/o % of total pop",
+         "12.74977069",
+         "11.56442928",
+         "12.86523854",
+         "13.89732143",
+         "11.90179806"
+        ],
+        [
+         "40-49",
+         "7582",
+         "27338",
+         "3074",
+         "3038",
+         "7474"
+        ],
+        [
+         "40-49 y/o % of total pop",
+         "13.63644539",
+         "12.53910156",
+         "12.35480889",
+         "13.5625",
+         "12.92185339"
+        ],
+        [
+         "50-59",
+         "7738",
+         "29986",
+         "3278",
+         "3115",
+         "7844"
+        ],
+        [
+         "50-59 y/o % of total pop",
+         "13.91701588",
+         "13.75365789",
+         "13.17471163",
+         "13.90625",
+         "13.5615491"
+        ],
+        [
+         "60-69",
+         "5826",
+         "29932",
+         "3076",
+         "2545",
+         "6965"
+        ],
+        [
+         "60-69 y/o % of total pop",
+         "10.47822881",
+         "13.72888975",
+         "12.36284715",
+         "11.36160714",
+         "12.04183956"
+        ],
+        [
+         "70-79",
+         "4050",
+         "20936",
+         "2244",
+         "1723",
+         "4931"
+        ],
+        [
+         "70-79 y/o % of total pop",
+         "7.284041654",
+         "9.602700645",
+         "9.018930107",
+         "7.691964286",
+         "8.525242047"
+        ],
+        [
+         "80+",
+         "2014",
+         "9368",
+         "1048",
+         "785",
+         "2335"
+        ],
+        [
+         "80+ y/o % of total pop",
+         "3.62223701",
+         "4.296814083",
+         "4.212049355",
+         "3.504464286",
+         "4.036998617"
+        ],
+        [
+         "White-alone pop",
+         "42660",
+         "190301",
+         "12209",
+         "17211",
+         "55456"
+        ],
+        [
+         "% White-alone",
+         "76.72523875",
+         "87.2852281",
+         "49.06957116",
+         "76.83482143",
+         "95.87828492"
+        ],
+        [
+         "Black-alone pop",
+         "10915",
+         "19492",
+         "12042",
+         "4770",
+         "950"
+        ],
+        [
+         "% Black-alone",
+         "19.63094189",
+         "8.940382163",
+         "48.39837627",
+         "21.29464286",
+         "1.642461964"
+        ],
+        [
+         "Native American/American Indian-alone pop",
+         "267",
+         "1684",
+         "164",
+         "98",
+         "378"
+        ],
+        [
+         "% NA/AI-alone",
+         "0.480207191",
+         "0.772399116",
+         "0.659137495",
+         "0.4375",
+         "0.653526971"
+        ],
+        [
+         "Asian-alone pop",
+         "681",
+         "2508",
+         "113",
+         "53",
+         "185"
+        ],
+        [
+         "% Asian-alone",
+         "1.224798115",
+         "1.150342626",
+         "0.45416181",
+         "0.236607143",
+         "0.319847856"
+        ],
+        [
+         "Hawaiian/Pacific Islander-alone pop",
+         "62",
+         "146",
+         "46",
+         "26",
+         "70"
+        ],
+        [
+         "% Hawaiian/PI-alone",
+         "0.111508786",
+         "0.066965719",
+         "0.184880029",
+         "0.116071429",
+         "0.121023513"
+        ],
+        [
+         "Two or more races pop",
+         "1016",
+         "3891",
+         "307",
+         "242",
+         "801"
+        ],
+        [
+         "% Two or more races",
+         "1.827305264",
+         "1.78468228",
+         "1.233873237",
+         "1.080357143",
+         "1.384854772"
+        ],
+        [
+         "POP_ESTIMATE_2018",
+         "55601",
+         "218022",
+         "24881",
+         "22400",
+         "57840"
+        ],
+        [
+         "N_POP_CHG_2018",
+         "158",
+         "5403",
+         "-277",
+         "-155",
+         "13"
+        ],
+        [
+         "GQ_ESTIMATES_2018",
+         "455",
+         "2190",
+         "2820",
+         "2151",
+         "489"
+        ],
+        [
+         "R_birth_2018",
+         "11.8",
+         "10.5",
+         "10.4",
+         "11.1",
+         "11.8"
+        ],
+        [
+         "R_death_2018",
+         "9.6",
+         "10.3",
+         "12.9",
+         "11.4",
+         "11.4"
+        ],
+        [
+         "R_NATURAL_INC_2018",
+         "2.2",
+         "0.1",
+         "-2.5",
+         "-0.3",
+         "0.3"
+        ],
+        [
+         "R_INTERNATIONAL_MIG_2018",
+         "0.0",
+         "0.5",
+         "0.5",
+         "0.4",
+         "0.1"
+        ],
+        [
+         "R_DOMESTIC_MIG_2018",
+         "0.7",
+         "24.3",
+         "-9.1",
+         "-7.0",
+         "-0.2"
+        ],
+        [
+         "R_NET_MIG_2018",
+         "0.6",
+         "24.8",
+         "-8.6",
+         "-6.6",
+         "0.0"
+        ],
+        [
+         "Less than a high school diploma 2014-18",
+         "4204",
+         "14310",
+         "4901",
+         "2650",
+         "7861"
+        ],
+        [
+         "High school diploma only 2014-18",
+         "12119",
+         "40579",
+         "6486",
+         "7471",
+         "13489"
+        ],
+        [
+         "Some college or associate's degree 2014-18",
+         "10552",
+         "46025",
+         "4566",
+         "3846",
+         "13267"
+        ],
+        [
+         "Bachelor's degree or higher 2014-18",
+         "10291",
+         "46075",
+         "2220",
+         "1813",
+         "5010"
+        ],
+        [
+         "Percent of adults with less than a high school diploma 2014-18",
+         "11.3",
+         "9.7",
+         "27.0",
+         "16.8",
+         "19.8"
+        ],
+        [
+         "Percent of adults with a high school diploma only 2014-18",
+         "32.6",
+         "27.6",
+         "35.7",
+         "47.3",
+         "34.0"
+        ],
+        [
+         "Percent of adults completing some college or associate's degree 2014-18",
+         "28.4",
+         "31.3",
+         "25.1",
+         "24.4",
+         "33.5"
+        ],
+        [
+         "Percent of adults with a bachelor's degree or higher 2014-18",
+         "27.7",
+         "31.3",
+         "12.2",
+         "11.5",
+         "12.6"
+        ],
+        [
+         "POVALL_2018",
+         "7587",
+         "21069",
+         "6788",
+         "4400",
+         "7527"
+        ]
+       ],
+       "shape": {
+        "columns": 5,
+        "rows": 108
+       }
+      },
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -1307,7 +1749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1445,7 +1887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1468,7 +1910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1500,7 +1942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1521,11 +1963,221 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "340",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "1171",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "2303",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "967",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "872",
+         "rawType": "float64",
+         "type": "float"
+        }
+       ],
+       "conversionMethod": "pd.DataFrame",
+       "ref": "f7a9a1e9-4881-4f38-a789-b5c71044d365",
+       "rows": [
+        [
+         "0-9 y/o % of total pop",
+         "10.37037037",
+         "13.70189579",
+         "10.30938275",
+         "12.2481548",
+         "12.7484619"
+        ],
+        [
+         "10-19 y/o % of total pop",
+         "10.90146751",
+         "12.75589359",
+         "10.95751684",
+         "12.06862158",
+         "13.74822527"
+        ],
+        [
+         "20-29 y/o % of total pop",
+         "16.92522711",
+         "13.40295909",
+         "10.3245734",
+         "10.35308199",
+         "10.72527212"
+        ],
+        [
+         "30-39 y/o % of total pop",
+         "11.72606569",
+         "15.50686798",
+         "10.4790116",
+         "10.9914223",
+         "10.57146238"
+        ],
+        [
+         "40-49 y/o % of total pop",
+         "12.09643606",
+         "11.10984977",
+         "11.11955036",
+         "10.57251147",
+         "10.95598675"
+        ],
+        [
+         "50-59 y/o % of total pop",
+         "13.21453529",
+         "13.49755931",
+         "15.44888349",
+         "13.76421305",
+         "13.96119262"
+        ],
+        [
+         "60-69 y/o % of total pop",
+         "12.55066387",
+         "11.17417792",
+         "15.5248367",
+         "14.10333134",
+         "13.54117369"
+        ],
+        [
+         "70-79 y/o % of total pop",
+         "8.266946191",
+         "5.687365195",
+         "9.891640083",
+         "9.136245761",
+         "7.856128727"
+        ],
+        [
+         "80+ y/o % of total pop",
+         "3.948287911",
+         "3.163431339",
+         "5.94460479",
+         "6.762417714",
+         "5.892096545"
+        ],
+        [
+         "% White-alone",
+         "62.94898672",
+         "57.94452643",
+         "97.71380829",
+         "95.93058049",
+         "87.24562234"
+        ],
+        [
+         "% Black-alone",
+         "32.84416492",
+         "39.65262799",
+         "0.526608942",
+         "0.69818472",
+         "0.982016091"
+        ],
+        [
+         "% NA/AI-alone",
+         "1.05520615",
+         "0.238392553",
+         "0.341789458",
+         "0.598444046",
+         "8.412210128"
+        ],
+        [
+         "% Asian-alone",
+         "0.817610063",
+         "0.715177659",
+         "0.493695883",
+         "1.057251147",
+         "0.520586843"
+        ],
+        [
+         "% Hawaiian/PI-alone",
+         "0.027952481",
+         "0.056760132",
+         "0.06076257",
+         "0.059844405",
+         "0.130146711"
+        ],
+        [
+         "% Two or more races",
+         "2.306079665",
+         "1.392515231",
+         "0.863334852",
+         "1.655695192",
+         "2.709417889"
+        ],
+        [
+         "R_birth_2018",
+         "10.9",
+         "14.7",
+         "9.7",
+         "12.5",
+         "12.5"
+        ],
+        [
+         "R_death_2018",
+         "9.8",
+         "8.4",
+         "13.3",
+         "14.3",
+         "10.7"
+        ],
+        [
+         "R_NATURAL_INC_2018",
+         "1.1",
+         "6.3",
+         "-3.6",
+         "-1.8",
+         "1.8"
+        ],
+        [
+         "Unemployment_rate_2018",
+         "4.2",
+         "4.4",
+         "4.5",
+         "3.2",
+         "3.0"
+        ],
+        [
+         "Active Patient Care Primary Care Physicians per 100000 Population 2018 (AAMC)",
+         "80.1",
+         "75.8",
+         "88.2",
+         "80.5",
+         "77.9"
+        ],
+        [
+         "Active Patient Care General Surgeons per 100000 Population 2018 (AAMC)",
+         "6.0",
+         "7.8",
+         "7.2",
+         "6.3",
+         "6.5"
+        ]
+       ],
+       "shape": {
+        "columns": 5,
+        "rows": 21
+       }
+      },
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -1796,7 +2448,7 @@
        "Active Patient Care General Surgeons per 100000...   6.500000  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
